[gd_scene load_steps=16 format=3 uid="uid://c5yseq3jhvtbc"]

[ext_resource type="Script" path="res://practice.gd" id="1_xtu48"]
[ext_resource type="Texture2D" uid="uid://bceeto1gv8b7b" path="res://Assets/bg.png" id="2_rkgl6"]
[ext_resource type="PackedScene" uid="uid://rxn8leqlwtys" path="res://Asteroid/asteroid.tscn" id="3_piex2"]
[ext_resource type="Script" path="res://Asteroid/asteroidl2.gd" id="4_gxiom"]
[ext_resource type="PackedScene" uid="uid://c8mikvvc5k26n" path="res://Asteroid/s_asteroid.tscn" id="5_lxa66"]
[ext_resource type="Script" path="res://Player/Player_Container.gd" id="6_wntme"]
[ext_resource type="PackedScene" uid="uid://cjgerofqdbc2r" path="res://Player/player.tscn" id="7_uon3u"]
[ext_resource type="Script" path="res://Player/eplayer.gd" id="8_jnsby"]
[ext_resource type="PackedScene" uid="uid://choehqrrwlpm" path="res://Enemy/enemy.tscn" id="8_owo35"]
[ext_resource type="PackedScene" uid="uid://d3ukfpwmbceww" path="res://Enemy/enemy_2.tscn" id="9_wkv65"]
[ext_resource type="Script" path="res://UI/HUD.gd" id="10_uyl4j"]
[ext_resource type="FontFile" uid="uid://cxlgmxicom4h2" path="res://Assets/Breads.ttf" id="11_bq4g3"]
[ext_resource type="Script" path="res://UI/Menu.gd" id="12_283ml"]
[ext_resource type="AudioStream" uid="uid://c5353g6wbrn3g" path="res://Assets/Battle Lava - TV Fire Witch.mp3" id="13_7ily6"]
[ext_resource type="Script" path="res://Life_Container.gd" id="14_1ai3w"]

[node name="Game" type="Node2D"]
script = ExtResource("1_xtu48")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_rkgl6")

[node name="ColorRect2" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.0980392, 0.0980392, 0.152941, 0.584314)

[node name="Asteroid_Container" type="Node2D" parent="."]

[node name="Asteroid" parent="Asteroid_Container" instance=ExtResource("3_piex2")]
visible = false
position = Vector2(223, 507)
script = ExtResource("4_gxiom")

[node name="Asteroid2" parent="Asteroid_Container" instance=ExtResource("3_piex2")]
position = Vector2(1072, 208)
script = ExtResource("4_gxiom")

[node name="Asteroid3" parent="Asteroid_Container" instance=ExtResource("3_piex2")]
position = Vector2(805, 381)
script = ExtResource("4_gxiom")

[node name="SAsteroid2" parent="Asteroid_Container" instance=ExtResource("5_lxa66")]
position = Vector2(769, 81)

[node name="Effects" type="Node2D" parent="."]

[node name="Player_Container" type="Node2D" parent="."]
script = ExtResource("6_wntme")

[node name="Player" parent="Player_Container" instance=ExtResource("7_uon3u")]
script = ExtResource("8_jnsby")

[node name="Enemy_Container" type="Node2D" parent="."]

[node name="Enemy" parent="Enemy_Container" instance=ExtResource("8_owo35")]

[node name="Enemy2" parent="Enemy_Container" instance=ExtResource("9_wkv65")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_uyl4j")

[node name="Score" type="Label" parent="UI/HUD"]
layout_mode = 1
offset_left = 10.0
offset_right = 210.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("11_bq4g3")
theme_override_font_sizes/font_size = 20
text = "Score"
vertical_alignment = 1

[node name="Time" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -210.0
offset_right = -10.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("11_bq4g3")
theme_override_font_sizes/font_size = 20
text = "Time Left: infinite"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Indicator_Container" type="Control" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Timer" type="Timer" parent="UI/HUD"]

[node name="Menu" type="Control" parent="UI"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("12_283ml")

[node name="ColorRect" type="ColorRect" parent="UI/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="Label" type="Label" parent="UI/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -248.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("11_bq4g3")
theme_override_font_sizes/font_size = 50
text = "Pause Menu
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="mmenu" type="Button" parent="UI/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -64.0
offset_right = 100.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("11_bq4g3")
theme_override_font_sizes/font_size = 25
text = "Main Menu"

[node name="Restart" type="Button" parent="UI/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_right = 100.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("11_bq4g3")
theme_override_font_sizes/font_size = 25
text = "Restart Game"

[node name="Quit" type="Button" parent="UI/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 61.0
offset_right = 100.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("11_bq4g3")
theme_override_font_sizes/font_size = 25
text = "Quit"

[node name="ATimer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="ATimerhard" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Etimer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="Etimerhard" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_7ily6")
autoplay = true

[node name="Life_Container" type="Node2D" parent="."]
script = ExtResource("14_1ai3w")

[node name="Timer" type="Timer" parent="Life_Container"]
wait_time = 7.0
autostart = true

[connection signal="timeout" from="UI/HUD/Timer" to="UI/HUD" method="_on_timer_timeout"]
[connection signal="pressed" from="UI/Menu/mmenu" to="UI/Menu" method="_on_mmenu_pressed"]
[connection signal="pressed" from="UI/Menu/Restart" to="UI/Menu" method="_on_restart_pressed"]
[connection signal="pressed" from="UI/Menu/Quit" to="UI/Menu" method="_on_quit_pressed"]
[connection signal="timeout" from="ATimer" to="." method="_on_a_timer_timeout"]
[connection signal="timeout" from="ATimerhard" to="." method="_on_a_timerhard_timeout"]
[connection signal="timeout" from="Etimer" to="." method="_on_etimer_timeout"]
[connection signal="timeout" from="Etimerhard" to="." method="_on_etimerhard_timeout"]
[connection signal="timeout" from="Life_Container/Timer" to="Life_Container" method="_on_timer_timeout"]
